--- a/css/cssportal.tooltip.css
+++ b/css/cssportal.tooltip.css
@@ -1,11 +1,28 @@
+/*===================================================================================================
+Adapted from the tooltip design at http://www.cssportal.com/css-tooltip-generator/
+======================================================================================================*/
+/*---------------------------------------------------------------------------------------
+For the markers to be positioned, their parent element must also have a position. So 
+they are all inside divs with the class pix that has a relative position but isn't moved 
+out of its normal positioning.
+----------------------------------------------------------------------------------- */
 .pix {
 	position: relative;
 	top: 0;
 	left: 0;
 }
+/*---------------------------------------------------------------------------------------
+To give all the buttons (the markers) the absolute position they need, all buttons 
+within divs with class pix are given that. 
+----------------------------------------------------------------------------------- */
 div.pix button{
   position: absolute;
 }
+/*---------------------------------------------------------------------------------------
+The spans contain the text of the tooltips, they are hidden on page load with 
+visibility: hidden. Other properties that are the same for all of them are also 
+included here
+----------------------------------------------------------------------------------- */
 div.pix span {
   position: absolute;
   width: 0px;
@@ -16,6 +33,12 @@ div.pix span {
   visibility: hidden;
   border-radius: 6px;
 }
+/*---------------------------------------------------------------------------------------
+And properties the same for all when they are displayed on hover are covered here. 
+Also it is necessary to list all of the different versions of the tooltips, as there is 
+no way to cover the general case of spans inside classes being hovered over, and then 
+specify that they are visible in that case. So, one by one.
+----------------------------------------------------------------------------------- */
 .tooltipT:hover span, .tooltipTML:hover span, .tooltipTL:hover span, .tooltipTMR:hover span, 
 .tooltipTR:hover span, .tooltipL:hover span, .tooltipML:hover span, .tooltipR:hover span, 
 .tooltipMR:hover span, .tooltipB:hover span, .tooltipBML:hover span, .tooltipBL:hover span, 
@@ -26,6 +49,11 @@ div.pix span {
   z-index: 10;
   width: 400px;
   }
+ /*---------------------------------------------------------------------------------------
+ All the rest is to create tooltips adapted to markers in different areas of their image and 
+ different spots on the page, to keep them from running off the screen or blocking things 
+ people will probably be looking at.
+----------------------------------------------------------------------------------- */
 .tooltipT:hover span{
   bottom: 16px;
   left: -200px;
