testing navbar styles
Former-commit-id: e89c1367342167de0c79bd1ec1309e687b9b144c [formerly 3b9847bfdb30f27c27eb64a314bc9aeea6330070]
Former-commit-id: e8cfc38b07934e1dc4bf3fa029acbe2d5281145e

--- a/css/main.css
+++ b/css/main.css
@@ -628,12 +628,13 @@ in a div called nav so that the text is positioned according to the edge of the 
 not the edge of the nav which runs off it.
 ----------------------------------------------------------------------------------- */
 nav {
+	display: inline-block;
 	position: fixed;
 	top: -104px;
 	right: -10px;
 	background-color: #000;
 	/*width: 380px;*/
-	height: 135px;
+	/*height: 135px;*/
 	border-bottom-left-radius: 65px;
 	border: 1px solid #ccc;
 	z-index: 20;
