added overlay style
Former-commit-id: c656a2c052cee8fabe380e1a711e81e1495b2ef4

--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,11 @@ content. Button positioning is defined in the cssportal.tooltip.css stylesheet.
 	color: rgba(255,255,60,1);
 	background-color: rgba(250, 0, 250, 1);
 }
+/*3d model thumbnail overlays*/
+.overlay1024 {
+	position: absolute;
+	margin-left: -1024px;
+}
 /*---------------------------------------------------------------------------------------
 The rest is not in use, it was for previous sections of the Plan page
 ----------------------------------------------------------------------------------- */
