--- a/css/main.css
+++ b/css/main.css
@@ -157,13 +157,13 @@ tooltips run off the screen.
 ----------------------------------------------------------------------------------- */
 @media only screen and (min-width:1000px) {
 	html {
-	background: #000 url(http://www.moonwards.com/img/tycho7color.png) no-repeat fixed 0 0;
+	background: #000 url(img/tycho7color.png) no-repeat fixed 0 0;
 	background-size: 100%;
 	}
 }
 @media only screen and (max-width: 1000px) {
 	html {
-	background: #000 url(http://www.moonwards.com/img/tycho7color.png) no-repeat fixed 0 0;
+	background: #000 url(img/tycho7color.png) no-repeat fixed 0 0;
 	background-size: 2000px;
 	font-size: 90% !important;
 	}
