--- a/css/main.css
+++ b/css/main.css
@@ -452,7 +452,7 @@ to be only visible on hover or tap, as all such elements are in pix divs
 /*=============================================================================================================
 							ELEMENT ATTRIBUTES
 ===============================================================================================================*/
-.details {
+details {
 	cursor: pointer;
 }
 
