--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,6 @@ hr {
 
 audio,
 canvas,
-iframe,
 img,
 svg,
 video {
@@ -501,7 +500,7 @@ img {
 	width: auto
 }
 /*============================================================================
-							FeedEk
+							FeedEk - https://github.com/enginkizil/FeedEk
 ==============================================================================*/
 .feedEkList {
 	width:90%; 
@@ -527,6 +526,34 @@ img {
 	font-size:11px;
 	color:#ccc
 	} 
+/*==============================================================================
+						Responsive iFrames by Ben Marshall
+						https://benmarshall.me/responsive-iframes/
+===============================================================================*/	
+	.intrinsic-container {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+}
+ 
+/* 16x9 Aspect Ratio */
+.intrinsic-container-16x9 {
+  padding-bottom: 56.25%;
+}
+ 
+/* 4x3 Aspect Ratio */
+.intrinsic-container-4x3 {
+  padding-bottom: 75%;
+}
+ 
+.intrinsic-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin:0!important;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
