--- a/css/main.scss
+++ b/css/main.scss
@@ -36,29 +36,51 @@ html, ul {
     background-size: 1600px;}
 }
 nav {
+  width: 100%;
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 36px;
+
 }
+
 nav ul {
+  list-style-type: none;
+}
+
+nav ul:first-child {
   @include flexy;
   width: 100%;
   height: 33px;
-	list-style-type: none;
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: baseline;
 }
 
 nav > ul li{
-  font-size: 1.2em;
+  font-size: 18px;
 }
 
-.dropdown {
+.dropdown li{
+  position: absolute;
+  top: 33px;
+  display: none;
+}
+.dropdown li:hover {
+  display: flex;
+
+
+}
+/*header {
   @include flexy;
   flex-direction: column;
-}
+  justify-content: space-between;
 
+}*/
+header section {
+  @include flexy;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+
+}
 .mainDivs {
   background: $mainBkgd;
   @include b-Radius;
