--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -1,21 +1,3 @@
-[class*="bubble"] {
-  font: italic 1.2em/1.3em;
-  background: rgba(50, 50, 0, 0.4);
-  border-radius: 37.5px;
-  display: flex;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center; }
-
-.bubble {
-  height: 75px; }
-
-.bubble p {
-  padding: 15px; }
-
 html {
   color: #fff;
   font: 1em/1.4em 'Titillium Web', sans-serif;
@@ -23,12 +5,12 @@ html {
   margin: 0;
   padding: 0; }
 
-@media only screen and (min-width: 1000px) {
-  body {
-    background-size: 100%; } }
+@media only screen and (min-width: 1350px) {
+  html {
+    background-size: 100% auto; } }
 
-@media only screen and (max-width: 1000px) {
-  body {
+@media only screen and (max-width: 1350px) {
+  html {
     background-size: 1600px; } }
 
 nav {
@@ -45,7 +27,7 @@ nav {
     font-weight: 300;
     color: #fac819; }
   nav a:hover {
-    background-color: #3c3c14; }
+    color: yellow; }
 
 nav > ul {
   display: flex;
@@ -59,6 +41,7 @@ nav > ul {
 
 nav > ul li {
   font-size: 18px;
+  font-weight: 300;
   padding: 5px; }
 
 /* Make dropdown menus*/
@@ -68,30 +51,53 @@ nav li > ul {
   display: -webkit-flex;
   display: -ms-flex;
   flex-direction: column;
-  display: none; }
+  display: none;
+  border-radius: 15px;
+  border: 1px solid #666;
+  border-top: none;
+  padding: 10px; }
 
 nav li:hover > ul {
   display: flex; }
 
-header section {
+header {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  flex-flow: row-reverse wrap;
+  justify-content: space-around;
+  height: 250px;
+  padding-top: 50px; }
+
+.sec1 {
+  flex-grow: 4;
+  min-width: 350px;
+  padding-right: 60px; }
+
+.sec2 {
+  align-self: flex-end;
+  flex-grow: 7;
   display: flex;
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
   flex-direction: row-reverse;
-  align-items: stretch;
-  justify-content: space-around;
-  height: 250px;
-  margin: 40px 10px; }
-
-.sec1 {
-  flex: 3 0; }
-
-.sec2 {
-  flex: 2 1;
-  align-self: flex-end; }
+  justify-content: center; }
   .sec2 p {
-    width: 200px; }
+    width: 40%;
+    min-width: 400px;
+    padding: 12px 25px;
+    text-align: right;
+    margin-right: 40px;
+    margin-bottom: 35px; }
+
+section {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  margin: auto; }
 
 .mainDivs {
   background: rgba(50, 50, 0, 0.5);
@@ -103,6 +109,14 @@ header section {
 .intro {
   font-size: 1.1em;
   line-height: 1.6em; }
+
+.accent {
+  font-style: italic;
+  font-weight: 200;
+  font-size: 22px;
+  line-height: 25px;
+  background: black;
+  border-radius: 30px; }
 
 a {
   text-decoration: none; }
