Layout modernization on body starts
Former-commit-id: a683ef8ab47a5c9d40018666a4dffc2749acb3df [formerly aee85aabece44a03ca1c9c34b81087187b7caa72]
Former-commit-id: c0ce0ba9a1a09c1c1fcff9f56149c280e140c26b

--- a/css/_standard_mixins.scss
+++ b/css/_standard_mixins.scss
@@ -4,9 +4,31 @@
   display: -webkit-flex;
   display: -ms-flex;
 }
-@mixin b-Radius {
-  border-radius: $radius;
-  -moz-border-radius: $radius;
-  -webkit-border-radius: $radius;
-  -ms-border-radius: $radius;
+@mixin b-RadiusOut {
+  border-radius: $outRadius;
+  -moz-border-radius: $outRadius;
+  -webkit-border-radius: $outRadius;
+  -ms-border-radius: $outRadius;
+}
+@mixin b-RadiusIn {
+  border-radius: $inRadius;
+  -moz-border-radius: $inRadius;
+  -webkit-border-radius: $inRadius;
+  -ms-border-radius: $inRadius;
+}
+
+@mixin linx ($link, $visit, $hover, $active) {
+  a {
+      color: $link;
+      &:visited {
+        color: $visit;
+      }
+      &:hover {
+        background-color: $hover;
+      }
+      &:active {
+        background-color: $active;
+      }
+      text-decoration: none;
+    }
 }
