--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -1,126 +1,3 @@
-html {
-  color: #fff;
-  font: 1em/1.4em 'Titillium Web', sans-serif;
-  background: #000 url(https://www.moonwards.com/img/tycho7left.png) no-repeat fixed right 33px;
-  margin: 0;
-  padding: 0; }
-
-@media only screen and (min-width: 1350px) {
-  html {
-    background-size: 100% auto; } }
-
-@media only screen and (max-width: 1350px) {
-  html {
-    background-size: 1600px; } }
-
-nav {
-  width: 100%;
-  position: fixed;
-  top: 0; }
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    background-color: #000; }
-  nav a {
-    text-decoration: none;
-    font-weight: 300;
-    color: #fac819; }
-  nav a:hover {
-    color: yellow; }
-
-nav > ul {
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  width: 100%;
-  height: 33px;
-  justify-content: space-around;
-  align-items: baseline; }
-
-nav > ul li {
-  font-size: 18px;
-  font-weight: 300;
-  padding: 5px; }
-
-/* Make dropdown menus*/
-nav li > ul {
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  flex-direction: column;
-  display: none;
-  border-radius: 15px;
-  border: 1px solid #666;
-  border-top: none;
-  padding: 10px; }
-
-nav li:hover > ul {
-  display: flex; }
-
-header {
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  flex-flow: row-reverse wrap;
-  justify-content: space-around;
-  height: 250px;
-  padding-top: 50px; }
-
-.sec1 {
-  flex-grow: 4;
-  min-width: 350px;
-  padding-right: 60px; }
-
-.sec2 {
-  align-self: flex-end;
-  flex-grow: 7;
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  flex-direction: row-reverse;
-  justify-content: center; }
-  .sec2 p {
-    width: 40%;
-    min-width: 400px;
-    padding: 12px 25px;
-    text-align: right;
-    margin-right: 40px;
-    margin-bottom: 35px; }
-
-section {
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  margin: auto; }
-
-.mainDivs {
-  background: rgba(50, 50, 0, 0.5);
-  border-radius: 15px;
-  -moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -ms-border-radius: 15px; }
-
-.intro {
-  font-size: 1.1em;
-  line-height: 1.6em; }
-
-.accent {
-  font-style: italic;
-  font-weight: 200;
-  font-size: 22px;
-  line-height: 25px;
-  background: black;
-  border-radius: 30px; }
-
-a {
-  text-decoration: none; }
-
 /*
 Adapted from the tooltip design at http://www.cssportal.com/css-tooltip-generator/
 */
@@ -239,3 +116,189 @@ specify that they are visible in that case. So, one by one.
 .tooltipBR:hover span {
   left: 100%;
   top: -8px; }
+
+/*TODO: Put all layout elements in a _layout.scss partial -
+that includes all the variables below, and mixins for the
+main elements of our layout. The current _standard_mixins
+partial will be converted to that.
+
+Incorporate rem for sizing
+and get rid of px.
+
+Incorporate media queries as part of
+elements that need to be responsive but should stack below
+a certain viewer width - there can be as many as you want,
+i was confused, they don't involve an http call.
+
+Make a really good page that people with incompatible
+browsers are taken to, that sells the idea of upgrading,
+and also explains why and has a link to a basic site
+if they absolutely won't or can't.
+
+Add variables and maybe mixins to the _tooltip partial.
+
+Solve:
+  Comment sections, in-house, fully-featured
+  Twitter feed in sidebar that isn't obnoxious
+  RSS feed generator
+  Getting rid of Sketchfab - Three.js canvasses?
+  YouTube channel - replace on the site with Vimeo?
+
+Create reading list, codepens, and video that explains the
+way the css and html works, so others can easily maintain
+or add to it.
+
+Check out Jade and see if the html should also be adapted.
+
+Check out making Atom packages, hacking Atom, and Electron,
+so we can essentially create a custom CMS for Moonwards.
+*/
+html {
+  color: #fff;
+  font: 1rem/1.5rem 'Titillium Web', sans-serif;
+  background: #000 url(https://www.moonwards.com/img/tycho7left.png) no-repeat fixed right 33px;
+  margin: 0;
+  padding: 0; }
+
+@media only screen and (min-width: 1350px) {
+  html {
+    background-size: 100% auto; } }
+
+@media only screen and (max-width: 1350px) {
+  html {
+    background-size: 1600px; } }
+
+nav {
+  width: 100%;
+  position: fixed;
+  top: 0; }
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    background-color: #000; }
+  nav a {
+    text-decoration: none;
+    font-weight: 300;
+    color: #fac819; }
+  nav a:hover {
+    color: yellow; }
+
+nav > ul {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  width: 100%;
+  height: 33px;
+  justify-content: space-around;
+  align-items: baseline; }
+
+nav > ul li {
+  font-size: 18px;
+  font-weight: 300;
+  padding: 5px; }
+
+/* Make dropdown menus*/
+nav li > ul {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  flex-direction: column;
+  display: none;
+  border-radius: 15px;
+  border: 1px solid #666;
+  border-top: none;
+  padding: 10px; }
+
+nav li:hover > ul {
+  display: flex; }
+
+header {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  flex-flow: row-reverse wrap;
+  justify-content: space-around;
+  height: 250px;
+  padding: 50px 0; }
+
+.sec1 {
+  flex-grow: 4;
+  min-width: 350px;
+  padding-right: 60px; }
+
+.sec2 {
+  align-self: flex-end;
+  flex-grow: 7;
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  flex-direction: row-reverse;
+  justify-content: center; }
+  .sec2 p {
+    width: 40%;
+    min-width: 400px;
+    padding: 12px 25px;
+    text-align: right;
+    margin-right: 40px;
+    margin-bottom: 35px; }
+
+.accent {
+  font-style: italic;
+  font-weight: 200;
+  font-size: 22px;
+  line-height: 25px;
+  background: black;
+  border-radius: 30px; }
+
+.container {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex; }
+  .container a {
+    color: yellow;
+    text-decoration: none; }
+    .container a:visited {
+      color: #d2ee5e; }
+    .container a:hover {
+      background-color: #3c3c0a; }
+    .container a:active {
+      background-color: #3c3c0a; }
+
+section {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  margin: auto;
+  padding: 15px; }
+
+.outerDiv {
+  background-color: rgba(50, 50, 0, 0.5);
+  border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -ms-border-radius: 2rem; }
+
+.innerDiv {
+  background-color: rgba(10, 10, 10, 0.5);
+  border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
+  -ms-border-radius: 1.5rem;
+  margin: 15px; }
+  .innerDiv p {
+    padding: 12px;
+    margin: 12px; }
+
+.intro {
+  font-size: 1.1em;
+  line-height: 1.8em; }
+
+a {
+  text-decoration: none; }
