--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,46 @@
 @import '_standard_mixins.scss';
+@import '_tooltip.scss';
+/*TODO: Put all layout elements in a _layout.scss partial -
+that includes all the variables below, and mixins for the
+main elements of our layout. The current _standard_mixins
+partial will be converted to that.
 
-$mainBkgd: rgba(50, 50, 0, 0.5);
-$nestBkgd: rgba(10, 10, 10, 0.5);
+Incorporate rem for sizing
+and get rid of px.
+
+Incorporate media queries as part of
+elements that need to be responsive but should stack below
+a certain viewer width - there can be as many as you want,
+i was confused, they don't involve an http call.
+
+Make a really good page that people with incompatible
+browsers are taken to, that sells the idea of upgrading,
+and also explains why and has a link to a basic site
+if they absolutely won't or can't.
+
+Add variables and maybe mixins to the _tooltip partial.
+
+Solve:
+  Comment sections, in-house, fully-featured
+  Twitter feed in sidebar that isn't obnoxious
+  RSS feed generator
+  Getting rid of Sketchfab - Three.js canvasses?
+  YouTube channel - replace on the site with Vimeo?
+
+Create reading list, codepens, and video that explains the
+way the css and html works, so others can easily maintain
+or add to it.
+
+Check out Jade and see if the html should also be adapted.
+
+Check out making Atom packages, hacking Atom, and Electron,
+so we can essentially create a custom CMS for Moonwards.
+*/
+$outerBkgd: rgba(50, 50, 0, 0.5);
+$innerBkgd: rgba(10, 10, 10, 0.5);
 $noteBkgd: rgba(0, 0, 0, 0.3);
-$radius: 15px;
+$outRadius: 2rem;
+$inRadius: 1.5rem;
 $mainPad: 20px;
 $anchorColor: rgb(250, 200, 25);
 $accentBkgd: rgba(0,0,0, 1);
@@ -17,7 +54,7 @@ $accentLnHt: 25px;
 
 html {
     color: #fff;
-    font: 1em/1.4em 'Titillium Web', sans-serif;
+    font: 1rem/1.5rem 'Titillium Web', sans-serif;
     background: #000 url(https://www.moonwards.com/img/tycho7left.png) no-repeat fixed right 33px;
     margin:0;
     padding: 0;
@@ -91,7 +128,7 @@ header {
   flex-flow: row-reverse wrap;
   justify-content: space-around;
   height: 250px;
-  padding-top: 50px;
+  padding: 50px 0;
 }
 
 .sec1 {
@@ -114,21 +151,6 @@ justify-content: center;
       margin-bottom: 35px;
     }
 }
-section {
-  @include flexy;
-  margin: auto;
-
-}
-.mainDivs {
-  background: $mainBkgd;
-  @include b-Radius;
-}
-
-.intro {
-  font-size: 1.1em;
-  line-height: 1.6em;
-}
-
 .accent {
   font-style: $accentStyle;
   font-weight: $accentWeight;
@@ -136,132 +158,44 @@ section {
   line-height: $accentLnHt;
   background: $accentBkgd;
   border-radius: $accentRad;
-  //border: $accentBorder;
 }
+.container {
+  @include flexy;
+  @include linx(yellow,rgb(210, 238, 94),rgb(60, 60, 10),
+  rgb(60,60,10))
+}
+section {
+  @include flexy;
+  margin: auto;
+  padding: 15px;
+
+}
+.outerDiv {
+  background-color: $outerBkgd;
+  @include b-RadiusOut;
+}
+
+.innerDiv {
+  background-color: $innerBkgd;
+  @include b-RadiusIn;
+  margin: 15px;
+    p {
+      padding: 12px;
+      margin: 12px;
+    }
+}
+
+.intro {
+  font-size: 1.1em;
+  line-height: 1.8em;
+}
+
+aside {
+
+}
+
 
 a {
   text-decoration: none;
 
-}
-
-/*
-Adapted from the tooltip design at http://www.cssportal.com/css-tooltip-generator/
-*/
-
-/*
-For the markers to be positioned, their parent element must also have a position. So
-they are all inside divs with the class pix that has a relative position but isn't moved
-out of its normal positioning.
- */
-.pix {
-	position: relative;
-	top: 0;
-	left: 0;
-}
-
-/*
-To give all the buttons (the markers) the absolute position they need, all buttons
-within divs with class pix are given that.
-*/
-div.pix button{
-  position: absolute;
-}
-/*
-The spans contain the text of the tooltips, they are hidden on page load with
-visibility: hidden. Other properties that are the same for all of them are also
-included here
-*/
-div.pix span {
-  position: absolute;
-  color: #FFFFFF;
-  height: auto;
-  line-height: 1.2em;
-  text-align: left;
-  visibility: hidden;
-  border-radius: 6px;
-}
-/*
-And properties the same for all when they are displayed on hover are covered here.
-Also it is necessary to list all of the different versions of the tooltips, as there is
-no way to cover the general case of spans inside classes being hovered over, and then
-specify that they are visible in that case. So, one by one.
-*/
-.tooltipT:hover span, .tooltipTML:hover span, .tooltipTL:hover span, .tooltipTMR:hover span,
-.tooltipTR:hover span, .tooltipL:hover span, .tooltipML:hover span, .tooltipR:hover span,
-.tooltipMR:hover span, .tooltipB:hover span, .tooltipBML:hover span, .tooltipBL:hover span,
-.tooltipBBL:hover span, .tooltipBMR:hover span, .tooltipBR:hover span, .tooltipBBR:hover span {
-  visibility: visible;
-  background-color: rgba(30, 0, 30, 1);
-  padding: 8px;
-  z-index: 10;
-  width: 400px;
-  }
- /*
- All the rest is to create tooltips adapted to markers in different areas of their image and
- different spots on the page, to keep them from running off the screen or blocking things
- people will probably be looking at.
-*/
-.tooltipT:hover span{
-  bottom: 16px;
-  left: -200px;
-}
-.tooltipTML:hover span {
-  bottom: 16px;
-  left: -300px;
-}
-.tooltipTL:hover span {
-  bottom: 16px;
-  right: -50%;
-}
-.tooltipTMR:hover span {
-  bottom: 16px;
-  left: -100px;
-}
-.tooltipTR:hover span {
-  bottom: 16px;
-  left: -50%;
-}
-.tooltipL:hover span {
-  right: 100%;
-  top: -180px;
-}
-.tooltipML:hover span {
-  right: 100%;
-  top: -90px;
-}
-.tooltipR:hover span {
-  left: 100%;
-  top: -180px;
-}
-.tooltipMR:hover span {
-  left: 100%;
-  top: -90px;
-}
-.tooltipB:hover span {
-  top: 16px;
-  left: -200px;
-}
-.tooltipBML:hover span {
-  top: 16px;
-  left: -300px;
-}
-.tooltipBL:hover span {
-  right: 100%;
-  top: -8px;
-}
-.tooltipBBL:hover span {
-  top: 16px;
-  left: -350px;
-}
-.tooltipBBR:hover span {
-  top: 16px;
-  left: -30px;
-}
-.tooltipBMR:hover span {
-  top: 16px;
-  left: -100px;
-}
-.tooltipBR:hover span {
-  left: 100%;
-  top: -8px;
 }
